# haema

./: .gitignore  README.ko.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: api.md  architecture.md  index.md  release.md  usage.md
example_haema/: core.md
example_haema/db/: chroma.sqlite3
example_haema_db/: chroma.sqlite3  core.md
examples/: google_genai_example.py
haema/: __init__.py  clients.py  memory.py  prompts.py  schemas.py
tests/: test_memory.py  test_prompts.py  test_public_api_docs.py  test_schemas.py
